[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/CharacterMoviment.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player/Player.png" type="Texture" id=2]
[ext_resource path="res://Sprites/player/showHitbox.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player/weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/bullets/Player.tres" type="BulletType" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 1.89576

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( -1, 0 )
collision_mask = 26
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -1 )
frames = SubResource( 1 )

[node name="Weapon" parent="." instance=ExtResource( 4 )]
position = Vector2( -36, 0 )

[node name="Weapon2" parent="." instance=ExtResource( 4 )]
position = Vector2( -15, 30 )

[node name="Weapon3" parent="." instance=ExtResource( 4 )]
position = Vector2( 15, 30 )

[node name="Weapon4" parent="." instance=ExtResource( 4 )]
position = Vector2( 36, 0 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="showHitbox" type="Sprite" parent="Hitbox"]
texture = ExtResource( 3 )

[node name="Shoot" type="Node2D" parent="."]

[node name="Right" type="BulletSpawner" parent="Shoot"]
position = Vector2( 10, 0 )
arc_rotation = -1.5708
bullet_type = ExtResource( 5 )

[node name="Left" type="BulletSpawner" parent="Shoot"]
position = Vector2( -10, 0 )
arc_rotation = -1.5708
bullet_type = ExtResource( 5 )
